--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "Team_Galapagos.sln"
+    "dotnet.defaultSolution": "Galapagos_VampireSurvivors.sln"
 }
